--- a/public/style.css
+++ b/public/style.css
@@ -9,8 +9,20 @@ html{
     sans-serif;
 }
 
+body{
+    display: flex;
+    width: 100vw;
+    box-sizing: border-box;
+}
 
-/* #region Sidebar */
+/* #region Aside/ Sidebar */
+#sidebar{
+    width: 11rem;
+    box-shadow: 1px 0 2px 0 #bbbfca91;
+    height: 100vh;
+    padding: 1rem;
+}
+
 #site-title {
     font-family: 'Playfair Display', serif;
     font-size: 2rem;
