--- a/public/style.css
+++ b/public/style.css
@@ -7,20 +7,21 @@ html{
     color: #495464;
     font-family: 'Raleway',
     sans-serif;
+
 }
 
 body{
     display: flex;
     width: 100vw;
-    box-sizing: border-box;
 }
 
 /* #region Aside/ Sidebar */
 #sidebar{
-    width: 13rem;
+    width: 15rem;
     box-shadow: 1px 0 2px 0 #bbbfca91;
     height: 100vh;
     padding: 1rem;
+    box-sizing: border-box;
 }
 
 #site-title {
@@ -37,10 +38,11 @@ body{
 /* ---Nav--- */
 .nav-group{
     list-style: none;
-    margin-top: 3em;
+    margin-top: 4rem;
+    padding-left: 1rem;
 }
 .nav-group-header, .nav-group-item{
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 .nav-group-header{
     font-weight: bold;
@@ -50,6 +52,20 @@ body{
 }
 .nav-group-item{
     font-weight: 300;
+    display: flex;
+    align-items: center;
+}
+.nav-item-img{
+    width: 20px;
+    margin-right: 10px;
+}
+
+#nav-copyright {
+    font-family: 'Playfair Display', serif;
+    font-size: .9em;
+    margin-top: 4rem;
+    padding-left: 1rem;
+    opacity: .4;
 }
 /* #endregion Sidebar */
 
@@ -125,12 +141,15 @@ main{
 #player{
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
     background: #e8e8e8;
 }
 
 
 #player-progress{
-    width: 100vw;
+    width: 100%;
+    box-sizing: border-box;
     /* padding: 0; */
 }
 
@@ -139,7 +158,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     padding: 1rem;
     box-sizing: border-box;
 }
