--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,7 @@
 html{
     background-color: #f4f4f2;
     color: #495464;
-    font-family: 'Raleway',
-    sans-serif;
-
+    font-family: 'Raleway', arial;
 }
 
 body{
@@ -83,6 +81,7 @@ main{
     margin-bottom: 2rem;
 }
 
+
 /* __Search__ */
 #search-cont {
     width: 80%;
@@ -134,6 +133,52 @@ main{
     }
 
 
+
+    /* ___Main_Body */
+#main-body-cont{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-top: 2rem;
+}
+#main-main-section{
+    width: 60%;
+}
+#main-side-section{
+    width: 40%;
+}
+
+
+/*--- Featured Album Sec--- */
+#featured-div-header{
+    margin-bottom: .5rem;
+    opacity: .7;
+}
+#featured-div-body{
+    padding: 1rem;
+    margin-right: 1rem;
+    background: #e8e8e8;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+#featured-album-cover-art{
+    width: 12rem;
+    margin-right: 1rem;
+    border-radius: 5px;
+}
+#featured-album-name{
+    margin-bottom: .5rem;
+}
+#featured-album-artist {
+    margin-bottom: 1rem;
+}
+#featured-album-description {
+    margin-bottom: 1rem;
+    text-align: justify;
+    font-weight: 300;
+    font-size: .9em;
+}
 /* #endregion main styling */
 
 
