--- a/public/style.css
+++ b/public/style.css
@@ -179,6 +179,42 @@ main{
     font-weight: 300;
     font-size: .9em;
 }
+/*--- Featured Album Sec--- */
+
+/*--- Recently Added Sec--- */
+#recently-added-div{
+    margin-top: 3rem;
+}
+#recently-added-div-header{
+    margin-bottom: .75rem;
+    opacity: .7;
+}
+#recently-added-div-body{
+    display: flex;
+    justify-content: space-between;
+    /* padding: 2rem 0; */
+    margin-right: 1rem;
+    /* background: #e8e8e8; */
+    border-radius: 5px;
+}
+.recently-added-album{
+    width: 10rem;
+    text-align: center;
+}
+.recenty-added-album-img{
+    width: 100%;
+    border-radius: 5px;
+}
+.recently-added-album-name{
+    font-weight: bold;
+    /* font-size: .9em; */
+}
+.recently-added-album-artist{
+    font-size: .9em;
+    font-weight: 300;
+}
+/*--- Recently Added Sec--- */
+
 /* #endregion main styling */
 
 
